--- a/Themes/BasicBackground/BasicBackground.theme.css
+++ b/Themes/BasicBackground/BasicBackground.theme.css
@@ -29,7 +29,7 @@
 	--textshadow:					transparent;				/* default: transparent			(textshadow for text ontop of accentcolor nodes, ONLY accepts a color, no px)	*/
 	--settingsicons:				1;							/* Use Settings Icons in User/Server/Channel Settings: 1 = yes, 0 = no											*/
 	
-	--background:					url(https://wallpaperaccess.com/full/5927911.gif);	/* general background image				*/
+	--background:					url(https://github.com/Vistonalo/BetterDiscordAddons/blob/master/Themes/BasicBackground/_res/week7.gif);	/* general background image				*/
 	--backgroundposition:			center;						/* default: center				(position of background - values: [center/top/right/bottom/left])				*/
 	--backgroundsize:				cover;						/* default: cover				(sizefit of background - values: [cover/contain/auto])							*/
 	--backgroundblur:				unset;						/* default: unset				(blur in px, only works when --background is set to an image)					*/
